--- a/.gitignore
+++ b/.gitignore
@@ -2,27 +2,46 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
 venv/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Environment Variables
+.env
+.env.local
+.env.*.local
+
+# Instance Folder
+instance/
+
+# JSON Data Files
+**/reservations.json
+**/seat_counts.json
+**/seat_reservations.json
 
 # Flask
-instance/
-.webassets-cache
-
-# Environment variables
-.env
-
-# Database
-*.db
-*.sqlite
-
-# OS generated files
-.DS_Store
-Thumbs.db
-
-# IDE specific files
-.vscode/
-.idea/
-
-# Project specific
-reservations.json
-seat_counts.json
+flask_session/
